# smith

./: Cargo.toml  LICENSE  README.md  shell.nix
src/: agent.rs  config.rs  key.rs  lib.rs  main.rs  prompt.rs  protocol.rs  pubkey.rs  shells.rs  util.rs
