[package]
name = "smith"
version = "0.1.0"
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
license = "0BSD"
description = "A simple SSH agent with lazy unlocking"

[dependencies]
log = "0.4"
env_logger = "0.8.1"
clap = "2.33.3"
libc = "0.2"
byteorder = "1.3.4"
base64 = "0.13.0"
openssl = "0.10"
bitflags = "1"
quick-error = "2.0.0"
xdg = "2.2.0"
dirs = "3.0.1"
